# geda-gaf

./: Makefile.am  autogen.sh  configure.ac
libeda/: Makefile.am  libeda.pc.in
libeda/docs/reference/: Makefile.am  libeda-docs.sgml  libeda-sections.txt
libeda/include/: Makefile.am
libeda/include/libeda/: eda.h  edaconfig.h  edaerrors.h  edanet.h  edaobject.h  edapage.h  edapin.h  edatypes.h
libeda/src/: Makefile.am  edaconfig.c  edaerrors.c  edamarshallers.list  edanet.c  edaobject.c  edapage.c  edapin.c  edatypes.c  i18n.h  util.c  util.h
libeda/tests/: Makefile.am  page.sch  signaltracker.c  signaltracker.h  test-net.c  test-page.c  test-pin.c
m4/: geda-libeda.m4
