## Process this file with automake to produce Makefile.in

libedaincludedir = $(includedir)/libeda
libedainclude_HEADERS = \
	libeda/edaconfig.h \
	libeda/edaerrors.h \
	libeda/edanet.h \
	libeda/edaobject.h \
	libeda/edapage.h \
	libeda/edatypes.h

MOSTLYCLEANFILES = *.log core FILE *~
CLEANFILES = *.log core FILE *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in

